# asc-dev

./: .clangd  CMakeLists.txt  OAT.xml  README.md  classify_rule.yaml  version.cmake
examples/01_simd_cpp_api/00_introduction/03_matrix_vector_fusion/simt_gather_and_simd_adds/: CMakeLists.txt  README.md
examples/01_utilities/05_msProf/: CMakeLists.txt  README.md  matmul_leakyrelu.asc
examples/03_simt_api/02_features/00_resource_management/general_gather/: CMakeLists.txt  README.md  gather.asc  gather_v2.asc
impl/adv_api/: CMakeLists.txt
impl/adv_api/cmake/: kernel_impl.cmake
impl/adv_api/detail/: host_log.cpp
impl/adv_api/detail/activation/geglu/: geglu_3510_impl.h  geglu_c310_impl.h  geglu_common_impl.h
impl/adv_api/detail/activation/gelu/: gelu_3510_impl.h  gelu_c310_impl.h  gelu_impl.h
impl/adv_api/detail/activation/reglu/: reglu_3510_impl.h  reglu_c310_impl.h  reglu_common_impl.h  reglu_v200_impl.h  reglu_v220_impl.h
impl/adv_api/detail/activation/sigmoid/: sigmoid_3510_impl.h  sigmoid_c310_impl.h  sigmoid_common_impl.h  sigmoid_impl.h  sigmoid_v100_impl.h
impl/adv_api/detail/activation/silu/: silu_3510_impl.h  silu_c310_impl.h  silu_common_impl.h
impl/adv_api/detail/activation/softmax/: logsoftmax_base_impl.h  simple_softmax_base_impl.h  softmax_base_impl.h  softmax_common.h  softmax_flash_base_impl.h  softmax_flashv2_base_impl.h  softmax_flashv3_base_impl.h  softmax_grad_base_impl.h
impl/adv_api/detail/api_check/: host_apicheck.h  kernel_api_check.h
impl/adv_api/detail/common/: check.h  common.h
impl/adv_api/detail/kfc/: kernel_kfc.h  kfc_register_obj.h
impl/adv_api/detail/math/: math_common_impl.h  math_constant_util.h
impl/adv_api/detail/matmul/: batch_matmul_impl.h  matmul_impl.h  matmul_impl_base.h  mx_matmul_impl.h
impl/adv_api/detail/reduce/: reduce_common_ar_ra_reuse_unalign_3510_impl.h  reduce_common_ar_ra_reuse_unalign_c310_impl.h  reduce_common_ar_reuse_align_3510_impl.h  reduce_common_ar_reuse_align_c310_impl.h  reduce_common_ar_reuse_align_less_than_vl_3510_impl.h  reduce_common_ar_reuse_align_less_than_vl_c310_impl.h  reduce_common_ra_reuse_align_3510_impl.h  reduce_common_ra_reuse_align_c310_impl.h  reduce_common_util_3510_impl.h  reduce_common_util_c310_impl.h  reduce_common_util_impl.h  reduce_common_util_v220_impl.h
impl/adv_api/detail/sort/: sort_common_utils.h
impl/adv_api/tiling/activation/: geglu_tiling.cpp  gelu_tiling_impl.cpp  logsoftmax_tiling.cpp  reglu_tiling_impl.cpp  sigmoid_tiling_impl.cpp  silu_tiling.cpp  softmax_tiling.cpp  swiglu_tiling.cpp  swish_tiling.cpp
impl/adv_api/tiling/conv/: conv3d_tiling.cpp  conv3d_tiling_algorithm.cpp  conv3d_tiling_algorithm.h  conv3d_tiling_base.cpp  conv3d_tiling_util.cpp  conv3d_tiling_util.h
impl/adv_api/tiling/conv_backprop/: conv3d_bp_filter_tiling.cpp  conv3d_bp_filter_tiling_base.cpp  conv3d_bp_input_tiling.cpp  conv3d_bp_input_tiling_base.cpp  conv3d_bp_tiling_util.h
impl/adv_api/tiling/filter/: dropout_tiling_impl.cpp
impl/adv_api/tiling/hccl/: hccl_symbol_loader.h  hccl_tiling.cpp
impl/adv_api/tiling/index/: arithprogression_tiling_impl.cpp
impl/adv_api/tiling/math/: acos_tiling_impl.cpp  acosh_tiling.cpp  asin_tiling_impl.cpp  asinh_tiling.cpp  atan_tiling_impl.cpp  atanh_tiling.cpp  axpy_tiling_impl.cpp  bitwise_and_tiling_impl.cpp  bitwise_not_tiling_impl.cpp  bitwise_or_tiling_impl.cpp  bitwise_xor_tiling_impl.cpp  ceil_tiling_impl.cpp  clamp_tiling_impl.cpp  cos_tiling_impl.cpp  cosh_tiling_impl.cpp  cumsum_tiling.cpp  digamma_tiling_impl.cpp  erf_tiling_impl.cpp  erfc_tiling_impl.cpp  exp_tiling_impl.cpp  floor_tiling_impl.cpp  fma_tiling_impl.cpp  fmod_tiling_impl.cpp  frac_tiling_impl.cpp  hypot_tiling_impl.cpp  is_inf_tiling_impl.cpp  is_nan_tiling_impl.cpp  lgamma_tiling.cpp  log_tiling.cpp  logical_and_tiling_impl.cpp  logical_ands_tiling_impl.cpp  logical_not_tiling_impl.cpp  logical_or_tiling_impl.cpp  logical_ors_tiling_impl.cpp  logical_xor_tiling_impl.cpp  power_tiling_impl.cpp  rint_tiling_impl.cpp  round_tiling_impl.cpp  sign_tiling.cpp  sin_tiling_impl.cpp  (+7 more)
impl/adv_api/tiling/matmul/: bmm_tiling.cpp  math_util.cpp  math_util.h  matmul_constant_tiling_impl.h  matmul_constant_tiling_struct.h  matmul_constant_tiling_utils.h  matmul_constant_tiling_utils_mx.h  matmul_tiling.cpp  matmul_tiling_algorithm.cpp  matmul_tiling_algorithm.h  matmul_tiling_base.cpp
impl/adv_api/tiling/normalization/: batchnorm_tiling_impl.cpp  deepnorm_tiling_impl.cpp  groupnorm_tiling_impl.cpp  layernorm_grad_beta_tiling_impl.cpp  layernorm_grad_tiling_impl.cpp  layernorm_tiling_impl.cpp  normalize_tiling_impl.cpp  rmsnorm_tiling_impl.cpp  welfordfinalize_tiling_impl.cpp
impl/adv_api/tiling/pad/: broadcast_tiling.cpp  pad_tiling_impl.cpp
impl/adv_api/tiling/quantization/: antiquantize_tiling_impl.cpp  ascend_antiquant_tiling_impl.cpp  ascend_dequant_tiling_impl.cpp  ascend_quant_tiling_impl.cpp  dequantize_tiling_impl.cpp  quantize_tiling_impl.cpp
impl/adv_api/tiling/reduce/: mean_tiling.cpp  reduce_tiling.cpp  reduce_xor_sum_tiling.cpp  sum_tiling.cpp
impl/adv_api/tiling/select/: selectwithbytesmask_tiling_impl.cpp
impl/adv_api/tiling/sort/: sort_tiling_impl.cpp  topk_tiling_impl.cpp
impl/adv_api/tiling/transpose/: confusion_transpose_tiling_impl.cpp  transdata_tiling.cpp
tests/api/simt_api/: CMakeLists.txt
tests/api/simt_api/ascendc_case_ascend950pr_9599_simt/: test_operator_simt_c_cast.cpp  test_operator_simt_c_math.cpp  test_operator_simt_cast_sat.cpp  test_operator_simt_float.cpp
tests/api/simt_api/common_simt/: simt_compiler_stub.cpp  simt_compiler_stub.h
tests/api/utils/tiling/: CMakeLists.txt  test_tiling.cpp
tests/python/: CMakeLists.txt
tests/python/aclrt_launch_kernel/: test_aclrt_launch_kernel.py
tests/python/aclrt_launch_kernel/stub_files/: test_gen_host_stub_code_template.cpp  test_gen_host_stup_code.cpp
tests/python/adapter/: test_ascendc_super_kernel.py  test_compile_op.py
tests/python/asc_op_compiler/: test_ascendc_super_kernel.py  test_compile_op.py
tests/python/ci/: set_python_env.sh
(+4353 files in other folders)
