# ----------------------------------------------------------------------------------------------------------
# Copyright (c) 2025 Huawei Technologies Co., Ltd.
# This program is free software, you can redistribute it and/or modify it under the terms and conditions of
# CANN Open Software License Agreement Version 2.0 (the "License").
# Please refer to the License for details. You may not use this file except in compliance with the License.
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
# INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
# See LICENSE in the root of the software repository for the full text of the License.
# ----------------------------------------------------------------------------------------------------------

cmake_minimum_required(VERSION 3.16)

find_package(ASC REQUIRED)

project(kernel_samples LANGUAGES ASC CXX)

add_executable(demo
    batch_mmad.asc
)

target_link_libraries(demo PRIVATE
    tiling_api
    register
    platform
    m
)
message(STATUS "[INFO] B_SIZE is ${B_SIZE}")
message(STATUS "[INFO] M_SIZE is ${M_SIZE}")
message(STATUS "[INFO] K_SIZE is ${K_SIZE}")
message(STATUS "[INFO] N_SIZE is ${N_SIZE}")

target_compile_definitions(demo PRIVATE
    B_SIZE=${B_SIZE}
    M_SIZE=${M_SIZE}
    K_SIZE=${K_SIZE}
    N_SIZE=${N_SIZE}
)
target_compile_options(demo PRIVATE
    $<$<COMPILE_LANGUAGE:ASC>:--npu-arch=dav-2201>
)